[package]
name = "yago4"
version = "0.0.0"
edition = "2018"

[dependencies]
clap = "2"
failure = "0.1"
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
rio_api = "0.4"
rio_turtle = "0.4"
chrono = "0.4"
byteorder = "1"
rocksdb = "0.14"
percent-encoding = "2"
regex = "1"
url = "2"
crossbeam = "0.7"

[profile.release]
lto = true